2010-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added test cases for util::parseUIntNoThrow() and
	util::parseLLIntNoThrow().
	* test/UtilTest.cc

2010-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use util::strip() instead of util::trim()
	* src/ExpatXmlRpcRequestProcessor.cc
	* src/FeatureConfig.cc
	* src/HttpHeader.cc
	* src/MetalinkParserStateV3Impl.cc
	* src/OptionHandlerImpl.h
	* src/ServerStatMan.cc
	* src/UriListParser.cc
	* src/Xml2XmlRpcRequestProcessor.cc
	* src/bittorrent_helper.cc
	* src/cookie_helper.cc
	* src/messageDigest.cc
	* src/util.cc
	* src/util.h
	* test/FeatureConfigTest.cc
	* test/HttpRequestTest.cc
	* test/UriListParserTest.cc
	* test/UtilTest.cc

2010-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added util::strip()
	* src/util.cc
	* src/util.h
	* test/UtilTest.cc

2010-10-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added tests to HttpRequestTest about trailing slash of cookie
	path.
	* test/HttpRequestTest.cc

2010-10-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't append slash in CookieStorage::criteriaFind().  Append file
	part of URI to request-uri in HttpRequest::createRequest().  This
	change reverts the part of the previous change:"The
	request-path must be ends with '/' so that request-path '/foo/'
	path-matches cookie-path '/foo' and '/foo/' in the proposed
	algorithm."
	* src/CookieStorage.cc
	* src/HttpRequest.cc

2010-10-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten Cookie class and Cookie parser based on
	http://tools.ietf.org/html/draft-ietf-httpstate-cookie-14 with
	some modifications. When parsing cookie date, match time first so
	that it parses asctime() format. The request-path must be ends
	with '/' so that request-path '/foo/' path-matches cookie-path
	'/foo' and '/foo/' in the proposed algorithm.
	* src/Cookie.cc
	* src/Cookie.h
	* src/CookieParser.cc: Removed
	* src/CookieParser.h: Removed